Wrap each line in a separate <pre> element. This speeds up layout. Using <pre> also fixes background-color. Also "use strict".

--- a/style/domterm-core.css
+++ b/style/domterm-core.css
@@ -2,7 +2,8 @@
  * "True" optional styling should go in domterm-default.css.
  */
 html, body { width: 100%; height: 100% ; margin: 0px; overflow: hidden }
-div[class="domterm"] { width: 100%; height: 100%; overflow-y: scroll; overflow-x: hidden; margin: 0px; padding: 0px; border: 0px; white-space: pre }
+div[class="domterm"] { width: 100%; height: 100%; overflow-y: scroll; overflow-x: hidden; margin: 0px; padding: 0px; border: 0px }
+pre { padding: 0px; margin: 0px; } 
 span[class="wrap"] {padding: 0px; margin: 0px; white-space: nowrap }
 span[line="soft"] { padding: 0px; margin: 0px;}
 span[line="soft"]:before {content: "\2936"; }
